--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/extension-link": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@vercel/speed-insights": "^1.0.10",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
