--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "recharts": "^2.12.3"
   },
   "devDependencies": {
